<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Рабочий График</string>
    <string name="add_shift">Добавить смену</string>
    <string name="edit_shift">Редактировать смену</string>
    <string name="delete_shift">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="date">Дата</string>
    <string name="start_time">Начало</string>
    <string name="end_time">Конец</string>
    <string name="note">Примечание</string>
    <string name="no_shifts">Смен нет. Нажмите + чтобы добавить.</string>
    <string name="total_hours">Итого за месяц: %1$s ч</string>
    <string name="today">Сегодня</string>
    <string name="week_view">Неделя</string>
    <string name="month_view">Месяц</string>
    <string name="shift_deleted">Смена удалена</string>
    <string name="undo">Отменить</string>
    <string name="hours_format">%1$d:%2$02d</string>
    <string name="shift_duration">%1$s – %2$s (%3$s ч)</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="prev_week">&#8249;</string>
    <string name="next_week">&#8250;</string>
    <string name="current_week">Текущая неделя</string>
    <string name="confirm_delete">Удалить смену?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="work_type">Тип</string>
    <string name="work_type_work">Работа</string>
    <string name="work_type_dayoff">Выходной</string>
    <string name="work_type_vacation">Отпуск</string>
    <string name="work_type_sick">Больничный</string>
</resources>
